fix: post alignment and attribution

--- a/_sass/_blog.scss
+++ b/_sass/_blog.scss
@@ -37,6 +37,10 @@
 
 .entry-main-image {
   max-width: 100vw;
+  @media all and (max-width: 768px) {
+    margin-left: -15px;
+    margin-right: -15px;
+  }
 }
 
 .entry-image-credits{
